
* Don't force openssh to use protocol=2, since that is now the default.
  (Neil Martinsen-Burrell, #561061)

* Fix ``KeyError: 'port'`` when getting the stored password for an http
  URL.
  (Martin Pool, #654684)

* Make ``bzr tag --quiet`` really quiet. (Neil Martinsen-Burrell, #239523)

Documentation
*************

API Changes
***********

Internals
*********

* ``tools/fixed-in.py`` find a bug in NEWS from its number or a regexp
  matching the news entry and display the corresponding release, date, fix
  authors and the news entry itself. (Vincent Ladeuil)

Testing
*******

* Blank output section in scriptrunner tests no longer match any output.
  Instead, use '...' as a wildcard if you don't care about the output.
  (Martin Pool, #637830)


bzr 2.3b2
#########

:2.3b2: 2010-10-08

External Compatibility Breaks
*****************************

* The ``bzr tags`` command sorts tag names using a natural sort by
  default (so tag2 sorts before tag10).  The previous default was
  strictly "asciibetical".  That behavior is still available as ``bzr tags
  --sort=alpha``. (Neil Martinsen-Burrell, #640760)

New Features
************

* Add ``mainline`` revision specifier, which selects the revision that
  merged a specified revision into the mainline.  (Aaron Bentley)

* Add ``annotate`` revision specifier, which selects the revision that
  introduced a specified line of a file.  (Aaron Bentley)

* Add ``-Dmem_dump`` debug flag, which uses meliae to dump memory to 
  a file upon an out of memory error.
  (Karl Bielefeldt, #551391)

* ``bzr status`` now displays a summary of existing shelves after
  the other status information. This is done using a ``post_status``
  hook.
  (Parth Malwankar, #403687)

* GNU lsh is now a supported lsh client; just set BZR_SSH to 'lsh'.
  Also, bzr will recognize if the 'ssh' comand is a symlink to lsh.
  (Matthew Gordon, #374700)

* The ``pull`` and ``update`` commands now take a ``--show-base``